# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "AreTomo_CTF_for_RELION_5"
description = "AreTomo CTF estimation for RELION 5"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "BSD 3-Clause License"}
authors = [
  {email = "euanpyle@gmail.com"},
  {name = "Euan Pyle"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "starfile",
  "typer",
]

[project.urls]
homepage = "https://github.com/EuanPyle/AreTomo_CTF_for_RELION_5"
repository = "https://github.com/EuanPyle/AreTomo_CTF_for_RELION_5"

[project.scripts]
aretomo_ctf_4_relion = "aretomo_ctf_4_relion.aretomo_ctf_4_relion:cli"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true
packages = {find = {where = ["src"], exclude=[]}}

[tool.setuptools_scm]
write_to = "src/aretomo_ctf_4_relion/_version.py"
